--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "git rev-parse HEAD > .scmversion",
-    "build": "npm run build:js && npm run build:less",
-    "watch": "npm run watch:js & npm run watch:less; fg",
-    "lint": "npm run lint:js && npm run lint:less",
+    "build": "run-s build:*",
+    "watch": "run-p -lr watch:*",
+    "lint": "run-s lint:*",
     "build:js": "rollup -c",
     "watch:js": "rollup -c -w",
     "lint:js": "eslint src/js test/js rollup.conf.js",
@@ -55,6 +55,7 @@
     "less": "^2.7.2",
     "less-plugin-clean-css": "^1.5.1",
     "lesser-watch": "^1.2.1",
+    "npm-run-all": "^4.0.2",
     "rollup": "^0.45.2",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
@@ -64,6 +65,7 @@
     "rollup-plugin-node-resolve-and-alias": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-string": "^2.0.2",
+    "rollup-watch": "^4.3.1",
     "vows": "^0.8.1"
   }
 }
