Working npm watch:less script.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "watch:js": "rollup -c -w",
     "lint:js": "eslint src/js test/js rollup.conf.js",
     "lessc": "lessc --strict-math=on --source-map --include-path=src/less:node_modules/bootstrap/less --clean-css",
-    "build:less": "npm run lessc -- src/less/index.less dist/bundle.css",
-    "watch:less": "lesser-watch -c 'npm run lessc -- -' -e src/less/index.less -d dist/bundle.css",
+    "build:less": "npm run lessc -- src/less/index.less dist/index.css",
+    "watch:less": "lesser-watch -c 'npm run lessc -- --source-map-map-inline -' -e src/less/index.less -d dist",
     "lint:less": "npm run lessc -- --lint src/less/index.less",
     "pretest": "npm run build",
     "test": "vows --spec",
