--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:js": "rollup -c",
     "watch:js": "rollup -c -w",
     "lint:js": "eslint src/js test/js rollup.conf.js",
-    "lessc": "lessc --strict-math=on --source-map --include-path=src/less:node_modules/bootstrap/less --clean-css",
+    "lessc": "lessc --strict-math=on --source-map=dist/index.css.map --source-map-rootpath=. \"--source-map-basepath=$PWD\" --include-path=src/less:node_modules/bootstrap/less --clean-css",
     "build:less": "npm run lessc -- src/less/index.less dist/index.css",
     "watch:less": "lesser-watch -c 'npm run lessc -- --source-map-map-inline -' -e src/less/index.less -d dist",
     "lint:less": "npm run lessc -- --lint src/less/index.less",
@@ -21,7 +21,7 @@
     "coverage": "rm -rf coverage/* && istanbul cover --report json node_modules/.bin/vows -- --spec",
     "postcoverage": "remap-istanbul -i coverage/coverage-final.json -o coverage/coverage-remapped.json -b dist && remap-istanbul -i coverage/coverage-final.json -o coverage/coverage-remapped.lcov -t lcovonly -b dist && remap-istanbul -i coverage/coverage-final.json -o coverage/coverage-remapped -t html -b dist",
     "ci": "npm run coverage && codecov < coverage/coverage-remapped.lcov",
-    "start:dev": "run-p -r watch start",
+    "watch:start": "nodemon --watch dist/start.js --watch package.json --watch rollup.config.js dist/start.js",
     "start": "node dist/start.js"
   },
   "repository": {
@@ -56,6 +56,7 @@
     "less": "^2.7.2",
     "less-plugin-clean-css": "^1.5.1",
     "lesser-watch": "^1.2.1",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "rollup": "^0.45.2",
     "rollup-plugin-buble": "^0.15.0",
