--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   "dependencies": {
     "broadway": "^3.1.1",
     "cheerio": "^1.0.0-rc.2",
-    "director": "^1.2.8",
     "mime": "^1.3.6",
     "nconf": "^0.8.4",
     "spdy": "^3.4.7",
+    "tarantino": "^2.1.0",
     "tectonic.js": "^0.2.2",
     "union": "^0.4.6",
     "winston": "^2.3.1"
