--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-minifyliterals": "^1.0.0",
     "rollup-plugin-node-resolve-and-alias": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-re": "^1.0.6",
     "rollup-plugin-string": "^2.0.2",
     "rollup-watch": "^4.3.1",
     "vows": "^0.8.1"
